Added comments for sophistication

--- a/charExclusiveApp/charExclusiveApp/Base.lproj/Main.storyboard
+++ b/charExclusiveApp/charExclusiveApp/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                     <action selector="onClickSubmit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sxk-Xt-gg4"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DN2-FM-eW4">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DN2-FM-eW4">
                                 <rect key="frame" x="37" y="425" width="340" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
