--- a/WordGuessApp/WordGuessApp/Base.lproj/Main.storyboard
+++ b/WordGuessApp/WordGuessApp/Base.lproj/Main.storyboard
@@ -48,12 +48,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Check"/>
+                                <connections>
+                                    <action selector="checkButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fRz-xe-xw3"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pnl-u7-Nc3">
                                 <rect key="frame" x="159" y="519" width="98" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Play Again?"/>
+                                <connections>
+                                    <action selector="playAgainButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uyg-5b-Vuf"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -61,9 +67,8 @@
                     </view>
                     <connections>
                         <outlet property="checkButton" destination="7mm-EA-24i" id="WhA-Hk-GXY"/>
-                        <outlet property="displayLabel" destination="bbV-Ph-O5o" id="sW3-qx-8VT"/>
+                        <outlet property="displayLabel" destination="c9y-x5-JGM" id="6XY-4V-f2b"/>
                         <outlet property="guessEntered" destination="nOd-28-IUg" id="Tye-MY-OW1"/>
-                        <outlet property="guessStatus" destination="c9y-x5-JGM" id="Jq7-88-dbt"/>
                         <outlet property="hintLabel" destination="lu6-1f-lzN" id="dvK-2r-o1n"/>
                         <outlet property="playAgainButton" destination="pnl-u7-Nc3" id="yBh-Cg-vyM"/>
                     </connections>
