--- a/Bishop_SearchApp/Bishop_SearchApp/Base.lproj/Main.storyboard
+++ b/Bishop_SearchApp/Bishop_SearchApp/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                                                 <rect key="frame" x="283.5" y="0.0" width="90.5" height="34"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" image="magnifyingglass" catalog="system" title="Search"/>
+                                                <connections>
+                                                    <action selector="onSearchBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jmu-Go-ZKk"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -47,11 +50,17 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="147" height="31"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Prev Img"/>
+                                                <connections>
+                                                    <action selector="onPrevBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MOm-Nt-m3o"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F2e-w7-U1s">
                                                 <rect key="frame" x="227" y="0.0" width="147" height="31"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Next Img"/>
+                                                <connections>
+                                                    <action selector="onNextBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xdV-2n-UBo"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
