--- a/Bishop_SearchApp/Bishop_SearchApp/Base.lproj/Main.storyboard
+++ b/Bishop_SearchApp/Bishop_SearchApp/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ttu-UE-S8P">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lilly" translatesAutoresizingMaskIntoConstraints="NO" id="ttu-UE-S8P">
                                         <rect key="frame" x="0.0" y="125" width="374" height="200"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="3Ke-Y9-Sg1"/>
@@ -70,7 +70,6 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="c25-Ry-CFO"/>
                                         </constraints>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -101,6 +100,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="lilly" width="318" height="318"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
